Version 1.11 - NO NAME
-----------------------------
 - Removed the HasAdminBuffering module method.
 - If output buffering is disabled in the request, theme is also disabled.
 - Revamp of admin theme.
 - Remove the use_adodb_lite config variable
 - Remove the process_whole_template config variable
 - Plugins revamp, removed _cms_ from smarty function header. General plugin cleanup.
 - Removed smarty plugin google_search
 - Moved smarty plugin search to Search module
 - Moved smarty plugin print to CMSPrinting module
 - Moved smarty plugin {menu} to MenuManager module
 - Moved smarty plugin {news} to News module
 - Added default backend wysiwyg as a preference
 - Backend wysiwyg option on add user
 - Smartified editprefs
 - Updated /lib/jquery and cms_jquery plugin with latest jQuery and jQuery UI Frameworks
 - Added jQuery UI Smoothness Stylesheet to NCLeanGrey
 - System information page, and the installer now check for the XMLReader class.
 - Admin log ip_addr field is now bigger.  
 - Admin log now has an index (woot).
 - Modified index.php to handle 404 pages better
   (Now catches the CmsError404Exception )
 - Static routes are now stored in the cms_routes table, and cached to a file in tmp/cache
 - Rewrote the CmsRoutes class (but maintained compatibility)
 - Added functionality in system maintenance page to rebuild static routes.
 - Uninstalling a module now clears any module specific routes and smarty plugins
 - Content pages now register and work with static urls.
 - Total re-write of {cms_stylesheet} tag. Cache working as it should now. Media queries / types combine correctly now.
 - cms_http class now sends a referrer.
 - Fixes the pseudocron stuff to not run during the install or login process.
 - Documented the ContentBase class.  Many methods marked as protected or private... will be marking some as final in the future.
 - Minor improvements to site verification
 - Fixes for Add GCB wysiwyg options.